<resources>
    <string name="app_name">ZeSmart</string>
    <string name="logo_icon">Logo Icon</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="or">or</string>
    <string name="password">Password</string>
    <string name="pertanyaan_register">Don’t have an account? <b>Sign up</b> </string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
</resources>