<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent"
            android:layout_marginTop="57dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="19dp"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/logo_icon"
                    android:src="@drawable/logo"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/create_account"
                    android:textColor="#8F8C8C"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="18dp"

                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:width="300dp"
                    android:height="40dp"
                    android:autofillHints="emailAddress"
                    android:background="#F6F7FA"
                    android:drawableEnd="@drawable/icon_ceklis"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="15dp"
                    android:hint="@string/email"
                    android:textColor="#78909C"
                    android:textStyle="bold"
                    tools:ignore="Email,LabelFor">

                </EditText>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="23dp"
                    android:width="300dp"
                    android:height="40dp"
                    android:autofillHints="password"
                    android:background="#F6F7FA"
                    android:drawableEnd="@drawable/icon_ceklis"
                    android:inputType="text"
                    android:paddingHorizontal="15dp"
                    android:hint="@string/username"
                    android:textColor="#78909C"
                    android:textStyle="bold"
                    tools:ignore="LabelFor,Username">

                </EditText>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="23dp"
                    android:width="300dp"
                    android:height="40dp"
                    android:autofillHints="password"
                    android:background="#F6F7FA"
                    android:drawableEnd="@drawable/icon_eye_hide"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="15dp"
                    android:hint="@string/password"
                    android:textColor="#78909C"
                    android:textStyle="bold"
                    tools:ignore="LabelFor,Password">

                </EditText>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="23dp"
                    android:width="300dp"
                    android:height="40dp"
                    android:autofillHints="password"
                    android:background="#F6F7FA"
                    android:drawableEnd="@drawable/icon_eye_hide"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="15dp"
                    android:hint="@string/confirm_password"
                    android:textColor="#78909C"
                    android:textStyle="bold"
                    tools:ignore="LabelFor,Password">

                </EditText>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="52dp"
                    android:backgroundTint="#8F8C8C"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:cornerRadius="15dp"
                    tools:ignore="DuplicateSpeakableTextCheck" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>